--- a/gs-spring-boot-main/Jenkinsfile
+++ b/gs-spring-boot-main/Jenkinsfile
@@ -1,4 +1,7 @@
 pipeline {
+     tools {
+    maven 'M3'
+  }
     agent { any { image 'maven:3.8.4-openjdk-11-slim' } }
     stages {
         stage('build') {
