--- a/gs-spring-boot-main/Jenkinsfile
+++ b/gs-spring-boot-main/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
-     tools {
-    maven 'M3'
-  }
-    agent { any { image 'maven:3.8.4-openjdk-11-slim' } }
+    agent {
+         docker {
+              image 'maven:3.8.4-openjdk-11-slim' } 
+         }
     stages {
         stage('build') {
             steps {
