--- a/gs-spring-boot-main/Jenkinsfile
+++ b/gs-spring-boot-main/Jenkinsfile
@@ -1,13 +1,29 @@
 pipeline {
-    agent {
-         docker {
-              image 'maven:3.8.4-openjdk-11-slim' } 
-         }
-    stages {
-        stage('build') {
-            steps {
-                sh 'mvn --version'
-            }
-        }
-    }
+	agent none
+
+	triggers {
+		pollSCM 'H/10 * * * *'
+	}
+
+	options {
+		disableConcurrentBuilds()
+		buildDiscarder(logRotator(numToKeepStr: '14'))
+	}
+
+	stages {
+		stage("test: baseline (jdk8)") {
+			agent {
+				docker {
+					image 'adoptopenjdk/openjdk8:latest'
+					args '-v $HOME/.m2:/tmp/jenkins-home/.m2'
+				}
+			}
+			options { timeout(time: 30, unit: 'MINUTES') }
+			steps {
+				sh 'test/run.sh'
+			}
+		}
+
+	}
+
 }
