--- a/gs-spring-boot-main/Jenkinsfile
+++ b/gs-spring-boot-main/Jenkinsfile
@@ -18,6 +18,11 @@ pipeline {
 					args '-v $HOME/.m2:/tmp/jenkins-home/.m2'
 				}
 			}
+			options { timeout(time: 30, unit: 'MINUTES') }
+			steps {
+				sh ""
+					
+			}
 		}
 
 	}
