--- a/gs-spring-boot-main/Jenkinsfile
+++ b/gs-spring-boot-main/Jenkinsfile
@@ -1,9 +1,8 @@
 pipeline {
     agent any
     tools {
-        maven 'Maven 3.8.4'
-        jdk 'jdk8'
-    }
+        maven 'Maven'
+            }
     stages {
         stage ('Initialize') {
             steps {
