--- a/gs-spring-boot-main/Jenkinsfile
+++ b/gs-spring-boot-main/Jenkinsfile
@@ -1,27 +1,12 @@
 pipeline {
     agent any
-    tools {
-        maven 'Maven'
-            }
-    stages {
-        stage ('Initialize') {
-            steps {
-                sh '''
-                    echo "PATH = ${PATH}"
-                    echo "M2_HOME = ${M2_HOME}"
-                '''
-            }
-        }
 
-        stage ('Build') {
+    stages {
+        stage('Build') {
             steps {
-                sh 'mvn -Dmaven.test.failure.ignore=true install' 
-            }
-            post {
-                success {
-                    junit 'target/surefire-reports/**/*.xml' 
-                }
+                echo 'Building..'
+                sh 'mvn -version'
             }
         }
-    }
+     }
 }
