--- a/gs-spring-boot-main/Jenkinsfile
+++ b/gs-spring-boot-main/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Build') {
             steps {
              withEnv(['PATH+EXTRA=/home/capuser/jdk/jdk-18/bin:/usr/local/bin:/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/home/capuser/.local/bin:/home/capuser/bin:/home/capuser/maven/apache-maven-3.8.4/bin']) {
-             sh 'build.sh'
+             sh 'gs-spring-boot-main/test/run.sh'
              }
             }
         }
